# Geomag

./: .gitignore  MANIFEST.in  Makefile  README.md  demo.py  dummy.c  pyproject.toml  setup.py
benchmark/: benchmark.c  benchmark.py
examples/: example.c  example.py
geomag/: __init__.py  geomag.py
geomag_c/: __init__.py  geomag.py
include/: geomag.h
src/: geomag.c
test/: test_geomag.c
