[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geomag"
version = "1.0.0"
description = "High-performance World Magnetic Model (WMM) calculator"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    {name = "Justin"},
]
keywords = ["magnetic", "declination", "wmm", "navigation", "compass", "gis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Homepage = "https://github.com/yourusername/geomag"
"Bug Tracker" = "https://github.com/yourusername/geomag/issues"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["geomag*"]

[tool.setuptools.package-data]
geomag = ["*.so", "*.dylib", "*.dll"]
