[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geomag-c"
version = "1.0.0"
description = "High-performance World Magnetic Model (WMM) calculator with C backend"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Justin", email = "epa6643@gmail.com"},
]
keywords = ["magnetic", "declination", "wmm", "navigation", "compass", "gis", "geomag", "performance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Homepage = "https://github.com/Nav-data/Geomag"
"Bug Tracker" = "https://github.com/Nav-data/Geomag/issues"
Repository = "https://github.com/Nav-data/Geomag"

[tool.setuptools]
zip-safe = false
include-package-data = true
license-files = []

[tool.setuptools.packages.find]
include = ["geomag_c*"]

[tool.setuptools.package-data]
geomag_c = ["*.so", "*.dylib", "*.dll"]
